<resources>
    <string name="app_name" translatable="false">findPets</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="password_hint" translatable="false">**************</string>
    <string name="forgot_your_login_info">Forgot your login info?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="remember_my_password">Remember my password</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="label_app" translatable="false">Find Pets</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>
    <string name="conection_avaiable">No internet access</string>
    <string name="incorrect_email">unregistered email</string>
    <string name="incorrect_password">incorrect password</string>
    <string name="login_error">logging error</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="user_registred">user successfully registered</string>
    <string name="user_exist">user already registered</string>
    <string name="title_pets" translatable="false">Pets</string>
    <string name="title_about">about</string>
    <string name="title_activity_detalhe" translatable="false">DetalheActivity</string>
    <string name="title_activity_pet" translatable="false">PetActivity</string>
    <string name="action_settings">Settings</string>
    <string name="pet_register">Pet Register</string>
    <string name="pet_name">Name</string>
    <string name="pet_genus">Genus</string>
    <string name="pet_breed">Breed</string>
    <string name="pet_phone">Phone</string>
    <string name="pet_zip_code">Zip code</string>
    <string name="pet_last_date">Last seen</string>
    <string name="pet_comments">Comments</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="last_location">Last Location</string>
    <string name="pet_deleted">Pet deleted successfully</string>
    <string name="zip_not_found">Zip code not found</string>
    <string name="update_pet">Update Pet</string>
    <string name="required">" is required"</string>
    <string name="photo">photo</string>
    <string name="developed_by">Developed by Luis Fernando Ravanelli Lopes</string>
    <string name="version">Version 1.0.0.1</string>
    <string name="title_exit">Logout</string>
    <string name="pet_gender">Gender</string>
    <string name="pet_female">Female</string>
    <string name="pet_male">Male</string>
    <string name="pet_register_sucess">Pet successfully registred</string>
    <string name="message_error">Sorry, something has happened</string>
    <string name="pet_update_sucess">Pet successfully registred</string>
    <string name="file_select">Select photo</string>
    <string name="not_owner_pet">You are not the owner of this pet</string>
    <string name="pet_help_find">Help us find the pet</string>
    <string name="pet_message">This pet is lost, help us find it</string>
    <string name="share">Share</string>
    <string name="message_permission">Required permission to make calls</string>
    <string name="permission_title">Permissao Requerida</string>
    <string name="key_firebase">Key Firebase</string>
</resources>
