<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_bg"
    android:theme="@style/AppTheme"
    tools:context="br.com.lravanelli.findpets.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_logo_login"
            android:layout_height="@dimen/dimen_logo_login"
            android:layout_gravity="center"
            android:src="@mipmap/logo"
            android:padding="@dimen/margin_logo_splash"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textview_color"
            android:text="@string/e_mail" />

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/e_mail"
            android:id="@+id/etEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textview_color"
            android:text="@string/password"
            android:layout_marginTop="@dimen/quarenta"/>

        <EditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/edittext_bg"
            android:layout_marginTop="@dimen/quinze"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/password_hint"
            android:id="@+id/etPassword"
            android:singleLine="true"/>

        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remember_my_password"
            android:textColor="@color/textview_color"
            android:textSize="6pt"
            android:layout_marginTop="@dimen/dez"
            android:buttonTint="@color/buttonTint"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/sign_in"
            android:textColor="@color/colorAccent"
            android:id="@+id/btSignin"
            style="@style/button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:id="@+id/btSignup"
            style="@style/button"/>


    </LinearLayout>

</ScrollView>