<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.lravanelli.findpets.fragments.SobreFragment"
    android:background="@drawable/theme_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">
        <ImageView
            android:layout_width="@dimen/dimen_foto_list"
            android:layout_height="@dimen/dimen_foto_list"
            android:src="@mipmap/logo"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/developed_by"
            android:layout_marginTop="@dimen/padding_top_item"
            style="@style/editText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/version"
            style="@style/editText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/key_firebase"
            style="@style/editText"
            android:paddingTop="@dimen/dez"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit2_bg"
            style="@style/editText"
            android:hint="@string/pet_name"
            android:id="@+id/etKeyFirebase"
            android:inputType="none"/>


    </LinearLayout>


</FrameLayout>
