<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.lravanelli.findpets.fragments.CadFragment"
    android:background="@drawable/theme_bg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_register"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"
            android:padding="@dimen/padding_top_item"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:width="200dp"
            android:height="200dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ivPetFoto"
            android:src="@drawable/add"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_name"
            android:layout_gravity="center_horizontal"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/pet_name"
            android:id="@+id/etName"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_genus"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/pet_genus"
            android:id="@+id/etGenus"
            android:singleLine="true"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_breed"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/pet_breed"
            android:id="@+id/etBreed"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_gender"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgGender"
            android:orientation="horizontal"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColorHint="#CCC"
            style="@style/editText">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/rbFemale"
                android:text="@string/pet_female"
                android:buttonTint="#B1BCBE"
                android:textColor="#EEE"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:id="@+id/rbMale"
                android:text="@string/pet_male"
                android:buttonTint="#B1BCBE"
                android:textColor="#EEE"/>

        </RadioGroup>
        <!--<EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:textColorHint="#CCC"
            android:hint="@string/pet_gender"
            android:id="@+id/etGender"
            android:singleLine="true"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_phone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/pet_phone"
            android:id="@+id/etPhone"
            android:singleLine="true"
            android:inputType="phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_zip_code"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            style="@style/editText"
            android:hint="@string/pet_zip_code"
            android:id="@+id/etZip"
            android:singleLine="true"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_comments"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="#EEE"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/edittext_bg"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textAlignment="center"
            android:hint="@string/pet_comments"
            android:id="@+id/etComments"
            style="@style/editText"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/pet_register"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:id="@+id/btResgister"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</ScrollView>
